[package]
name = "chain-reader"
version = "1.0.0"
authors = ["Meow0x7E <Meow0x7E@outlook.com>"]
edition = "2024"
description = "Combining multiple [`Read`] instances into a sequential read pipeline with configurable error handling"
repository = "https://github.com/Meow0x7E/chain-reader"
license = "MIT"
keywords = ["chain", "concat", "read", "reader"]
categories = ["rust-patterns"]
